fixed proj card spacing for title and desc

--- a/css/desktop/proj1home.css
+++ b/css/desktop/proj1home.css
@@ -70,7 +70,7 @@
 .subheader-and-desc-container {
     display: flex;
     flex-direction: column;
-    row-gap: 15px;
+    row-gap: 5px;
     padding: 0px 8px 8px 8px;
 }
 
